styles.css
* {
    margin: 0;
    ;
}

/* Banner style start */
.banner {
    margin-top: 50px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.banner-image {
    border-radius: 16px;
    position: relative;
    overflow: hidden;
}

/* Code is for dark image */
.banner-image::before {
    content: "";
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    background: linear-gradient(180deg, rgb(7, 2, 17), rgba(7, 2, 17, 0));
}

.banner-text {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
    color: white;
    font-family: "Merriweather", serif;
}

.first-text {
    margin-bottom: 0;
    font-size: 32px;
    font-weight: 400;
}

.second-text {
    margin-top: 16px;
    font-size: 72px;
    font-weight: 900;
}

/* Banner style end */

/* All Categories section start */

.category-section {
    margin-top: 120px;
    text-align: center;
    font-family: "Inter", sans-serif;
}

.category-text1 {
    font-size: 88px;
    font-weight: 700;
    color: rgb(255, 0, 0);
    margin-top: 0;
    margin-bottom: 48px;
}

.category-desc {
    font-size: 24px;
    font-weight: 500;
    color: rgb(255, 0, 0);
    margin-top: 0;
    margin-bottom: 16px;
    font-family: "Inter", sans-serif;
}

.category-text2 {
    margin-top: 0;
    font-size: 48px;
    font-weight: 700;
}

/* All Categories section end */

/* Mid Night section start */
.mid-night {
    margin-top: 120px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.mid-night-image {
    border-radius: 16px;
    position: relative;
    overflow: hidden;
}

.mid-night-image::before {
    content: "";
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    background: linear-gradient(90.00deg, rgb(7, 2, 17), rgba(7, 2, 17, 0) 100%);
}

.mid-night-content {
    display: flex;
    text-align: center;
    justify-content: space-between;
    gap: 40px;
    position: absolute;
    margin-left: 126px;
}

.mid-night-text {
    text-align: left;
    color: white;
    font-family: "Merriweather", serif;
}

.mid-night-header {
    font-size: 64px;
    font-weight: 900;
    margin-bottom: 24px;
}

.mid-night-desc {
    font-family: "Inter", sans-serif;
    font-size: 18px;
    font-weight: 400;
    color: rgba(255, 255, 255, 0.8);
    margin-top: 0;
    margin-bottom: 48px;
}

.btn-join-now {
    background-color: red;
    color: white;
    padding: 10px 20px;
    border-radius: 5px;
    border: none;
}

.mid-night-image2 {
    border-radius: 16px;
    overflow: hidden;
    margin-right: 110px;
}

/* Mid Night section end */

/* Information section start */
.information {
    margin-top: 120px;
    background: linear-gradient(180.00deg, rgba(255, 0, 0, 0.1), rgba(255, 0, 0, 0) 100%);
    border-radius: 16px;
    text-align: center;
    padding-top: 100px;
    font-family: "Inter", sans-serif;
    font-size: 32px;
    width: 1320px;
    margin-left: auto;
    margin-right: auto;
}

#information-btn {
    margin-top: 48px;
    margin-bottom: 110px;
}

.color-text {
    color: red;
}

/* Information section end */

/* Portfolio section start */

.portfolio {
    margin-top: 120px;
    margin-bottom: 120px;
    width: 1320px;
    margin-left: auto;
    margin-right: auto;
}

#portfolio-header {
    font-family: "Merriweather", serif;
    font-size: 48px;
    font-weight: 900;
}

.cart {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 24px;
}

.cart img:hover {
    transform: scale(1.1);
}

/* Portfolio section end */

/* Subscribe section start */
.subscribe {
    text-align: center;
    background: rgba(255, 0, 0, 0.05);
    border-radius: 16px;
    width: 1320px;
    margin-left: auto;
    margin-right: auto;
    padding-top: 80px;
    padding-bottom: 80px;
    font-family: "Inter", sans-serif;
}

.subscribe-header {
    font-family: "Merriweather", serif;
    font-size: 48px;
    font-weight: 900;
    margin-top: 40px;
    margin-bottom: 6px;
}

.description {
    font-size: 20px;
    color: rgba(7, 2, 17, 0.6);
    margin-top: 16px;
    margin-bottom: 22px;
}

.email {
    margin-top: 26px;
    display: flex;
    justify-content: center;
}

#email-field {
    color: rgba(7, 2, 17, 0.6);
    padding: 25px 267px 25px 30px;
    border: none;
    border-radius: 50px 0 0 50px;
}

#btn-subscribe {
    border-radius: 0 50px 50px 0;
    padding: 24px 56px;
    font-size: 20px;
    font-weight: 600;
}

/* Subscribe section end */

/* Footer section start */
.footer {
    background-color: rgb(7, 2, 17);
    margin-top: 120px;
    color: white;
    padding: 120px 140px;
    font-family: "Inter", sans-serif;
    font-size: 24px;
    font-weight: 500;
}

.address-section {
    display: flex;
    justify-content: space-between;
    margin-bottom: 50px;
}

.contact {
    display: flex;
    justify-content: space-between;
    gap: 16px;
}

#contact-image {
    margin-top: 5px;
}

hr {
    border: 1px solid rgba(255, 255, 255, 0.15);
}

.icons {
    display: flex;
    justify-content: center;
    width: 62.5;
    height: 62.5;
    margin-top: 48.5px;
    margin-bottom: 48.5px;
}

.icons img {
    padding-right: 24px;
}

.terms {
    margin-top: 50px;
    display: flex;
    justify-content: space-between;
}

/* Footer section end */

